Update persona initials size. Update persona card initials. Fix issues and align adding members in facepile

--- a/src/components/Facepile/Facepile.less
+++ b/src/components/Facepile/Facepile.less
@@ -19,7 +19,7 @@
 
 .ms-FacePile ~ .ms-PersonaCard {
   display: none;
-  margin-top: 10px;
+  margin-top: 5px;
   &.is-active {
     display: block;
   }
