--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -58,7 +58,7 @@
 
 .ms-Persona-initials {
 	color: @ms-color-white;
-	font-size: @ms-font-size-xl;
+	font-size: @ms-font-size-l;
 	font-family: @ms-font-family-light;
 	line-height: 48px;
 
@@ -277,7 +277,7 @@
 	}
 
 	.ms-Persona-initials {
-		font-size: @ms-font-size-m;
+		font-size: @ms-font-size-s;
 		line-height: 32px;
 	}
 
@@ -326,7 +326,7 @@
 	}
 
 	.ms-Persona-initials {
-		font-size: @ms-font-size-l;
+		font-size: @ms-font-size-m;
 		line-height: 40px;
 	}
 
