--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -42,6 +42,11 @@
     top: 11px;
   }
 
+  .ms-Persona-initials {
+    font-size: @ms-font-size-xxl;
+    line-height: 80px;
+  }
+
   .ms-Persona-presence {
     border-color: @ms-color-neutralLighter;
     left: 77px;
